crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_use_client_effect.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from "@qwik.dev/core";

export const Child = component$(() => {
  const state = useStore({
    count: 0,
  });

  // Double count watch
  useBrowserVisibleTask$(() => {
    const timer = setInterval(() => {
      state.count++;
    }, 1000);
    return () => {
      clearInterval(timer);
    };
  });

  return <div>{state.count}</div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Child_component_XXXXXXXXXXXX");
export const Child = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Child_component_XXXXXXXXXXXX"),
);

=== test.tsx_Child_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Child_component_useBrowserVisibleTask_XXXXXXXXXXXX");
export const Child_component_XXXXXXXXXXXX = () => {
  const state = useStore({
    count: 0,
  });
  // Double count watch
  useBrowserVisibleTaskQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Child_component_useBrowserVisibleTask_XXXXXXXXXXXX", [
      state,
    ]),
  );
  return /* @__PURE__ */ _jsxSorted("div", null, null, _wrapProp(state, "count"), 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Child_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Child_component_useBrowserVisibleTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Child_component_useBrowserVisibleTask_XXXXXXXXXXXX = () => {
  const state = _captures[0];
  const timer = setInterval(() => {
    state.count++;
  }, 1000);
  return () => {
    clearInterval(timer);
  };
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_useBrowserVisibleTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Child_component_useBrowserVisibleTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Child_component_useBrowserVisibleTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Child_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useBrowserVisibleTask$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/

=== DIAGNOSTICS ===

[]
