crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_with_style.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStyles$ } from "@qwik.dev/core";

export const Foo = component$(
  () => {
    useStyles$(".class {}");
    return <div class="class" />;
  },
  {
    tagName: "my-foo",
  },
);

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
  {
    tagName: "my-foo",
  },
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_useStyles_XXXXXXXXXXXX");
export const Foo_component_XXXXXXXXXXXX = () => {
  useStylesQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_useStyles_XXXXXXXXXXXX"));
  return <div class="class" />;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_useStyles_XXXXXXXXXXXX.tsx === (ENTRY)
export const Foo_component_useStyles_XXXXXXXXXXXX = ".class {}";

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "Foo_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
