crates/swc-optimizer/core/src/snapshots/qwik_core__test__impure_template_fns.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";
const useFoo = (count) => {
  const tag = (s) => {
    const value = typeof s === "string" ? s : s[0];
    return `${value}-${count.value}`;
  };
  return tag;
};

export default component$(() => {
  const count = useSignal(0);
  const foo = useFoo(count);
  return (
    <>
      <p>{foo("test")}</p>
      <p>{foo`test`}</p>
      <button onClick$={() => count.value++}>Count up</button>
    </>
  );
});

=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
const useFoo = (count) => {
  const tag = (s) => {
    const value = typeof s === "string" ? s : s[0];
    return `${value}-${count.value}`;
  };
  return tag;
};
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
export { useFoo as _auto_useFoo };

=== test.tsx_test_component_XXXXXXXXXXXX.ts === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _auto_useFoo as useFoo } from "./test";
import { useSignal } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_test_component_Fragment_button_q_e_click_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = () => {
  const count = useSignal(0);
  const foo = useFoo(count);
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted("p", null, null, foo("test"), 1, null),
      /* @__PURE__ */ _jsxSorted("p", null, null, foo`test`, 1, null),
      /* @__PURE__ */ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "test_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
            [count],
          ),
        },
        "Count up",
        3,
        null,
      ),
    ],
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_test_component_Fragment_button_q_e_click_XXXXXXXXXXXX.ts === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const test_component_Fragment_button_q_e_click_XXXXXXXXXXXX = () => {
  const count = _captures[0];
  return count.value++;
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_Fragment_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_Fragment_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "ts",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count"
  ]
}
*/

=== DIAGNOSTICS ===

[]
