crates/swc-optimizer/core/src/snapshots/qwik_core__test__issue_117.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});

=== project/test.tsx ===
export const cache = patternCache[cacheKey] || (patternCache[cacheKey] = {});

=== DIAGNOSTICS ===

[]
