crates/swc-optimizer/core/src/snapshots/qwik_core__test__issue_476.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { Counter } from "./counter.tsx";

export const Root = () => {
  return (
    <html>
      <head>
        <meta charset="utf-8" />
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3} />
      </body>
    </html>
  );
};

=== test.tsx ===
import { Counter } from "./counter.tsx";
export const Root = () => {
  return (
    <html>
      <head>
        <meta charset="utf-8" />
        <title>Qwik Blank App</title>
      </head>
      <body>
        <Counter initial={3} />
      </body>
    </html>
  );
};

=== DIAGNOSTICS ===

[]
